// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteSLO happy path removes all resources associated to the slo 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "irrelevant",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`DeleteSLO happy path removes all resources associated to the slo 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-summary-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`DeleteSLO happy path removes all resources associated to the slo 3`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "slo-irrelevant-1",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`DeleteSLO happy path removes all resources associated to the slo 4`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "id": ".slo-observability.*.pipeline-irrelevant-1",
      },
      Object {
        "ignore": Array [
          404,
        ],
        "signal": AbortSignal {},
      },
    ],
    Array [
      Object {
        "id": ".slo-*irrelevant@custom",
      },
      Object {
        "ignore": Array [
          404,
        ],
        "signal": AbortSignal {},
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`DeleteSLO happy path removes all resources associated to the slo 5`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "conflicts": "proceed",
        "index": ".slo-observability.sli-v3*",
        "query": Object {
          "bool": Object {
            "filter": Object {
              "term": Object {
                "slo.id": "irrelevant",
              },
            },
          },
        },
        "slices": "auto",
        "wait_for_completion": false,
      },
      Object {
        "signal": AbortSignal {},
      },
    ],
    Array [
      Object {
        "conflicts": "proceed",
        "index": ".slo-observability.summary-v3*",
        "query": Object {
          "bool": Object {
            "filter": Object {
              "term": Object {
                "slo.id": "irrelevant",
              },
            },
          },
        },
        "refresh": false,
        "slices": "auto",
        "wait_for_completion": false,
      },
      Object {
        "signal": AbortSignal {},
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {},
    },
    Object {
      "type": "return",
      "value": Promise {},
    },
  ],
}
`;

exports[`DeleteSLO happy path removes all resources associated to the slo 6`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "filter": "alert.attributes.params.sloId:irrelevant",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`DeleteSLO happy path removes all resources associated to the slo 7`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "irrelevant",
      Object {
        "ignoreNotFound": true,
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
